--- a/git-in-next-project-KGD-2016.html
+++ b/git-in-next-project-KGD-2016.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="resources/elusive-webfont/css/elusive-webfont.css">
     <!-- Making Waves specific styles -->
     <link rel="stylesheet" href="resources/mw-template.css">
+    <link rel="stylesheet" href="resources/km-styles.css">
   </head>
 
   <body style='display: none'>
@@ -47,7 +48,7 @@
             <p>
                 Krzysztof Morcinek
           <br>
-                20 październik, 2015
+                16 luty, 2016
             </p>
         </article>
 
@@ -67,7 +68,8 @@
                 <li><a href="http://git-scm.com/book">gitbook - Pro Git</a></li>
                 <li><a href="http://git-scm.com/book/pl">gitbook - Pro Git - polish</a></li>
 				<li>Requires some learning :)</li>
-                <!--flow from people not experiencing problems-->
+				<li><a href="https://illustrated-git.readthedocs.org/en/latest/#">GIT Illustrated Cheatsheet</a></li>
+				<!--flow from people not experiencing problems-->
             </ul>
         </article>
 
@@ -75,7 +77,6 @@
             <h3>decentralized</h3>
             <ul class="build">
                 <li>no server needed</li>
-				<!-- git init for playing -->
                 <li>whole history, logs always with you</li>
                 <li>work offline</li>
             </ul>
@@ -86,6 +87,13 @@
             <ul class="build">
                 <li><img src="resources/images/git-cherry-pick.png" /></li>
                 <li>branch is pointer to commit</li>
+            </ul>
+        </article>
+
+        <article class="nologo">
+            <h3>commits content</h3>
+            <ul class="build">
+                <li><img class="fit-image" src="resources/images/commits-content.png" /></li>
             </ul>
         </article>
 
@@ -178,6 +186,15 @@
             <h3>cherry-pick</h3>
             <ul class="build">
                 <li>TEST-ONLY commit pattern.</li>
+            </ul>
+        </article>
+		
+        <article class="nologo">
+            <h3>where to host projects</h3>
+            <ul class="build">
+                <li>GitHub - most popular for OS projects</li>
+                <li>BitBucket - free alternative (even for private repos with up to couple contributors)</li>
+				<li>show your code, smart recruiters also search throught projects</li>
             </ul>
         </article>
 		
