--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 
   <body>
     <section>
+	  <h2>KGD 2016</h2>
+      <p><a href="https://www.meetup.com/pl-PL/KGD-NET/events/228708372/">95. spotkanie KGD.NET</a></p>
+      <p><a href="git-in-next-project-KGD-2016.html">Slajdy: Wystartuj z GITem w następnym projekcie</a></p>
+	</section>
+    <section>
 	  <h2>WrocNet 2015</h2>
       <p><a href="http://www.meetup.com/wrocnet/events/226137286/">80. Spotkanie Wrocławskiej Grupy .NET</a></p>
       <p><a href="git-in-next-project-wrocnet-2015.html">Slajdy: Wystartuj z GITem w następnym projekcie</a></p>
